created interface, add and delete function, user login.

--- a/Todo/templates/home.html
+++ b/Todo/templates/home.html
@@ -1,10 +1,22 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Home</title>
-</head>
-<body>
-
-</body>
-</html>
+{% extends 'base.html' %}
+{% block title %}
+Home
+{% endblock %}
+{% block content %}
+<div class="container p-5">
+    {% for note in notes %}
+    <div class="card">
+        <div class="card-body">
+            <div class="card-title">{{note.title}}</div>
+            <div class="card-subtitle">{{note.createdOn}}</div>
+            <div class="card-text">{{note.description}}</div>
+            <div class="form-control">
+                <a class="btn btn-warning" href="delete/{{note.id}}">Delete</a>
+            </div>
+        </div>
+    </div>
+    {% empty %}
+    <div class="card"><div class="card-title m-4 p-4 bg-warning">Nothing to show</div> </div>
+    {% endfor %}
+</div>
+{% endblock %}
