--- a/Todo/templates/base.html
+++ b/Todo/templates/base.html
@@ -17,16 +17,13 @@
         crossorigin="anonymous"></script>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark p-4">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#">Navbar</a>
+        <a class="navbar-brand mx-auto" href="{% url 'home' %}">My Notes</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
-                </li>
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0 mx-5">
                 {% if user.is_authenticated %}
                 <li class="nav-item">
                     <a type="button" class="btn btn-primary mx-2" data-bs-toggle="modal" data-bs-target="#addNote">
@@ -35,6 +32,10 @@
                 </li>
                 <li class="nav-item">
                     <a class="btn btn-danger mx-2" href="{% url 'logout' %}">Logout</a>
+                </li>
+                {% else %}
+                <li class="nav-item">
+                    <a class="btn btn-success mx-2" href="{% url 'create_user' %}">Register</a>
                 </li>
                 {% endif %}
             </ul>
@@ -69,6 +70,7 @@
         </div>
     </div>
 </div>
+
 {% block content %}{% endblock %}
 </body>
 </html>
